# hipy

./: .gitignore  Dockerfile  compile.py
.github/workflows/: test.yml
cppbackend/: .gitignore  CMakeLists.txt  builtin.h  builtin_arrow.h  builtin_commons.h  builtin_date.h  builtin_numpy.h  datastructures.h
hipy/: __init__.py  binding.py  compiler.py  context.py  decorators.py  function.py  internal_values.py  interpreter.py  intrinsics.py  ir.py  test_utils.py  value.py
hipy/cppbackend/: __init__.py  cppir.py
hipy/lib/: _tabular.py  builtins.py  math.py  pickle.py  statistics.py
hipy/mlirbackend/: __init__.py
hipy/opt/: array_patterns.py  canonicalization.py  dccg.py  eager_free.py  eliminate_dead_code.py  eliminate_dead_symbols.py  inline.py  pattern_rewriter.py  rewrite_cpp.py  tabular_patterns.py
test/: test_alias.py  test_bool.py  test_builtin_funcs.py  test_bytes.py  test_call.py  test_call_py.py  test_dict.py  test_for.py  test_global_const.py  test_hello_world.py  test_if.py  test_lambda.py  test_list.py  test_namedtuple.py  test_none.py  test_numeric.py  test_print.py  test_range.py  test_statistics.py  test_string.py  test_tabular.py  test_try.py  test_tuple.py  test_while.py
test/examples/: test_check_iban.py  test_fannkuch.py  test_levenshtein.py  test_schulze.py  test_taq.py
test/numpy/: test_array_construction.py  test_array_ops.py  test_array_reshape.py  test_array_subscript.py  test_math_funcs.py  test_scalar_types.py
test/opt/: test_array_patterns.py  test_dead_code_elimination.py  test_eager_free.py  test_inline.py  (+1 more)
(+26 files in other folders)
